8337981: ShenandoahHeap::is_in should check for alive regions

Reviewed-by: rkennke, wkemper